Auth example WIP

--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -50,4 +50,7 @@ $color-primary: hsl(214 98% 49%);
   ),
   $font-family-base: #{'Inter', sans-serif},
   $font-family-heading: #{'Poppins', sans-serif},
+  $btn-border-radius: 0.5rem,
+  $btn-font-weight: 600,
+  $form-label-font-weight: 600
 );
