--- a/pug/templates/page/auth.pug
+++ b/pug/templates/page/auth.pug
@@ -10,8 +10,14 @@ block content
         div(class='auth-info')
           img(class='auth-info__logo' src='../../assets/img/spruce-logo-light.svg' alt='Spruce CSS')
           div(class='auth-info__caption')
-            h2(class='auth-info__title') Welcome here
-            p(class='auth-info__description') Morbi nec ultricies risus. Curabitur nibh eros, facilisis et elementum vitae, eleifend a neque. Praesent feugiat, urna id pellentesque pulvinar, sapien mi consectetur felis, a varius enim odio nec tellus.
+            h2(class='auth-info__title') Morbi nec ultricies risus curabitur nibh eros
+            p(class='auth-info__description') Morbi nec ultricies risus. Curabitur nibh eros, facilisis et elementum vitae
+          nav(class='auth-info__navigation')
+            ul
+              li
+                a(href='#') Home
+              li
+                a(href='#') Support
       div(class='auth-screen__form')
         div(class='auth-form')
           h1(class='auth-form__title') Login
