--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -3,6 +3,18 @@
 $color-primary-light: hsl(215 100% 96%);
 $color-primary: hsl(214 98% 49%);
 
+$dark-color-primary: rgb(43, 135, 254);
+$dark-color-secondary: hsl(227 92% 55%);
+
+$dark-color-black: hsl(206 88% 6%);
+$dark-color-white: hsl(0 0% 95%);
+
+$dark-color-gray: hsl(0 0% 97%);
+$dark-color-gray-dark: hsl(0 0% 100% / 8%);
+
+$dark-color-danger: hsl(0 71% 51%);
+$dark-color-success: hsl(150 100% 33%);
+
 @use 'sprucecss/scss/spruce' with (
   $color-primary: $color-primary,
   $color-secondary: hsl(214 98% 25%),
@@ -10,18 +22,6 @@ $color-primary: hsl(214 98% 49%);
     base: (
       heading: hsl(238 69% 22%),
       text: hsl(207 44% 20%)
-    ),
-    btn: (
-      primary-foreground-opaque: hsl(0 0% 100% / 0.75),
-      secondary-foreground-opaque: hsl(0 0% 100% / 0.75),
-      tertiary-background: $color-primary-light,
-      tertiary-background-hover: $color-primary,
-      tertiary-foreground: $color-primary,
-      tertiary-foreground-hover: $color-primary-light,
-      delete-foreground: hsl(0 71% 51%),
-      delete-foreground-hover: hsl(0 0% 100%),
-      delete-background: color.scale(hsl(0 71% 51%), $lightness: 90%),
-      delete-background-hover: hsl(0 71% 51%)
     ),
     form: (
       border: hsl(223 16% 80%),
@@ -43,6 +43,77 @@ $color-primary: hsl(214 98% 49%);
       border: hsl(214 100% 90%),
       icon: hsl(245 37% 83%),
       active: $color-primary-light
+    )
+  ),
+  $dark-colors: (
+    base: (
+      primary: $dark-color-primary,
+      secondary: $dark-color-secondary,
+      background: $dark-color-black,
+      heading: $dark-color-white,
+      text: $dark-color-gray,
+      link: $dark-color-primary,
+      link-hover: color.scale($dark-color-primary, $lightness: -20%),
+      border: $dark-color-gray-dark,
+      mark-background: hsl(50 100% 80%),
+      mark-foreground: $dark-color-black,
+      code-background: hsl(207deg 64% 21%),
+      code-foreground: $dark-color-white,
+      blockquote-border: $dark-color-primary
+    ),
+    selection: (
+      foreground: $dark-color-white,
+      background: $dark-color-primary
+    ),
+    alert: (
+      danger: $dark-color-danger,
+      info: hsl(195 100% 42%),
+      success: $dark-color-success,
+      warning: hsl(48 89% 55%)
+    ),
+    btn: (
+      primary-background: rgb(43, 135, 254),
+      primary-foreground: $dark-color-white,
+      primary-shadow-focus: color.adjust(rgb(43, 135, 254), $alpha: -0.75),
+      secondary-background: $dark-color-secondary,
+      secondary-foreground: $dark-color-white,
+      secondary-shadow-focus: color.adjust($dark-color-secondary, $alpha: -0.75),
+      install-background: hsl(207, 39%, 17%),
+      install-background-hover: hsl(207, 23%, 26%),
+      install-foreground: hsl(0, 0%, 100%),
+      install-foreground-hover: hsl(0, 0%, 100%),
+    ),
+    form: (
+      background: color.scale($dark-color-black, $lightness: 5%),
+      background-disabled: $dark-color-black,
+      border: $dark-color-gray-dark,
+      border-disabled: $dark-color-gray-dark,
+      border-focus: $dark-color-primary,
+      shadow-focus: color.adjust($dark-color-primary, $alpha: -0.75),
+      check-foreground: $dark-color-black,
+      check-background: $dark-color-primary,
+      invalid: $dark-color-danger,
+      invalid-shadow: color.adjust($dark-color-danger, $alpha: -0.75),
+      label: $dark-color-white,
+      legend: $dark-color-white,
+      placeholder: hsl(0 0% 60%),
+      text: $dark-color-gray,
+      select-foreground: $dark-color-primary,
+      valid: $dark-color-success,
+      valid-shadow: color.adjust($dark-color-success, $alpha: -0.75)
+    ),
+    table: (
+      border: $dark-color-gray-dark,
+      caption: $dark-color-gray,
+      heading: $dark-color-white,
+      hover: hsl(0 0% 0% / 0.05),
+      text: $dark-color-gray,
+      stripe: hsl(0 0% 0% / 0.025)
+    ),
+    scrollbar: (
+      thumb-background: hsla(0, 0%, 100%, 0.15),
+      thumb-background-hover: hsla(0, 0%, 100%, 0.25),
+      track-background: hsla(0, 0%, 100%, 0.05)
     )
   ),
   $spacers: (
