--- a/pug/templates/layout.pug
+++ b/pug/templates/layout.pug
@@ -2,7 +2,7 @@ block variables
 -var time = Date.now();
 
 doctype html
-html(lang='en')
+html(lang='en' data-theme-mode='dark')
   head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
