--- a/assets/scss/_dark-mode.scss
+++ b/assets/scss/_dark-mode.scss
@@ -5,7 +5,7 @@
   ':root[data-theme-mode="dark"]'
 );
 
-[data-theme-mode="dark"] {
+[data-theme-mode='dark'] {
   color-scheme: dark;
 
   .auth-screen__info::before {
