--- a/assets/scss/page/_auth.scss
+++ b/assets/scss/page/_auth.scss
@@ -34,7 +34,7 @@
       inset: 0;
       opacity: 0.85;
       position: absolute;
-      z-index: -1
+      z-index: -1;
     }
   }
 
@@ -53,11 +53,12 @@
 }
 
 .auth-info {
+  align-items: start;
   color: hsl(0 0% 100%);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   height: 100%;
+  justify-content: space-between;
 
   &__logo {
     margin-block-end: spruce.spacer(m);
@@ -92,7 +93,6 @@
 
 .auth-form {
   @include spruce.layout-stack(spruce.spacer(s));
-  width: 40rem;
   max-width: 100%;
+  width: 40rem;
 }
-
