Auth example fixes

--- a/assets/scss/page/auth/_layout.scss
+++ b/assets/scss/page/auth/_layout.scss
@@ -14,7 +14,7 @@
     }
   }
 
-  &__info {
+  &__sidebar {
     background-image: url('../img/background/marita-kavelashvili-ugnrXk1129g-unsplash.jpg');
     background-size: cover;
     height: 100%;
