--- a/assets/scss/_dark-mode.scss
+++ b/assets/scss/_dark-mode.scss
@@ -8,7 +8,14 @@
 [data-theme-mode='dark'] {
   color-scheme: dark;
 
-  .auth-screen__info::before {
-    background-color: hsl(215 100% 21%);
+  .auth-screen__sidebar::before {
+    background-color: hsl(215 100% 15%);
+  }
+
+  select.form-control:not([multiple]):not([size]) {
+    @include spruce.field-icon(
+      spruce.$select-image,
+      spruce.color(primary, $only-color: true)
+    );
   }
 }
