--- a/assets/scss/page/auth/_sidebar.scss
+++ b/assets/scss/page/auth/_sidebar.scss
@@ -1,7 +1,7 @@
 @use 'sass:color';
 @use 'sprucecss/scss/spruce';
 
-.auth-info {
+.auth-sidebar {
   align-items: start;
   color: hsl(0 0% 100%);
   display: flex;
@@ -10,7 +10,6 @@
   justify-content: space-between;
 
   &__logo {
-    margin-block-end: spruce.spacer(m);
     width: 7rem;
   }
 
@@ -23,6 +22,13 @@
   &__title {
     color: hsl(0 0% 100%);
     font-weight: 400;
+  }
+
+  &__footer {
+    align-items: start;
+    display: flex;
+    flex-direction: column;
+    gap: spruce.spacer(s);
   }
 
   &__credit {
