--- a/pug/templates/layout.pug
+++ b/pug/templates/layout.pug
@@ -10,9 +10,13 @@ html(lang='en' data-theme-mode='light')
     script(src='../../assets/js/theme-switcher.js')
     link(rel='icon' href='../../assets/img/favicon.png' sizes='32x32')
     link(rel='stylesheet' href=`../../assets/css/main.css?time=${time}`)
-
+    link(rel='preconnect' href='https://fonts.googleapis.com')
+    link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin)
+    link(href='https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap' rel='stylesheet')
   body
     block content
     include ../../assets/icon/icons.svg
 
     script(src='../../assets/js/theme-switcher-handle.js')
+
+
