--- a/pug/templates/page/auth.pug
+++ b/pug/templates/page/auth.pug
@@ -9,7 +9,7 @@ block content
       div(class='auth-screen__sidebar')
         div(class='auth-sidebar')
           a(href='https://sprucecss.com/examples')
-            img(class='auth-sidebar__logo' src='../../assets/img/spruce-logo-light.svg' alt='Spruce CSS')
+            img(class='auth-sidebar__logo' src='../assets/img/spruce-logo-light.svg' alt='Spruce CSS')
           div(class='auth-sidebar__caption')
             h2(class='auth-sidebar__title') Morbi nec ultricies risus curabitur nibh eros
             p Morbi nec ultricies risus. Curabitur nibh eros, facilisis et elementum vitae
