--- a/pug/templates/layout.pug
+++ b/pug/templates/layout.pug
@@ -11,10 +11,11 @@ html(lang='en')
     meta(name='color-scheme' content='light dark')
     title Spruce CSS - #{title}
     link(rel='icon' href='../assets/img/favicon.png' sizes='32x32')
-    link(rel='stylesheet' href=`../assets/css/main.css?time=${time}`)
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin)
     link(href='https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap' rel='stylesheet')
+
+    block styles
   body
     block content
     include ../../assets/icon/icons.svg
