--- a/pug/templates/components/article/page-heading.pug
+++ b/pug/templates/components/article/page-heading.pug
@@ -1,5 +1,5 @@
 div(class='page-heading')
-  div(class='page-heading__container')
+  div(class='container--narrow')
     div(class='page-heading__inner')
       h1(class='page-heading__title') Why Mountains Is No Friend to Small Business
       include breadcrumb
