--- a/assets/scss/page/article/_index.scss
+++ b/assets/scss/page/article/_index.scss
@@ -1,3 +1,5 @@
 @forward 'layout';
-@forward 'page-heading';
-@forward 'page-content';
+@forward 'post-heading';
+@forward 'post-author';
+@forward 'post-content';
+@forward 'post-footer';
