--- a/pug/templates/components/article/post-content.pug
+++ b/pug/templates/components/article/post-content.pug
@@ -1,7 +1,7 @@
 div(class='container--wide')
   div(class='post-content')
     img(src='../../../assets/img/article/cover/benjamin-voros-phIFdC6lA4E-unsplash.jpg' alt='' lazyload)
-    p Woodlands payment Osgiliath tightening. Barad-dur follow belly comforts tender tough bell? Many that live deserve death. Some that die deserve life. Outwitted teatime grasp defeated before stones reflection corset seen animals Saruman&rsquo;s call?
+    p(class='lead') Woodlands payment Osgiliath tightening. Barad-dur follow belly comforts tender tough bell? Many that live deserve death. Some that die deserve life. Outwitted teatime grasp defeated before stones reflection corset seen animals Saruman&rsquo;s call?
     h2 Tad survive ensnare joy mistake courtesy Bagshot Row.
     p Ligulas step drops both? You shall not pass! Tender respectable success Valar impressive unfriendly bloom scraped? Branch hey-diddle-diddle pony trouble&rsquo;ll sleeping during jump Narsil.
     h3 North valor overflowing sort I&aacute;ve mister kingly money?
@@ -60,7 +60,7 @@ div(class='container--wide')
           img(src='../../../assets/img/article/gallery/marco-pregnolato-ahYX46whD8s-unsplash.jpg' alt='' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../../../assets/img/article/gallery/pietro-de-grandi-T7K4aEPoGGk-unsplash' alt='' lazyload)
+          img(src='../../../assets/img/article/gallery/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg' alt='' lazyload)
     div(class='table-responsive')
       table(class='table table--striped table--rounded table--clear-border')
         thead
