--- a/pug/templates/components/article/post-content.pug
+++ b/pug/templates/components/article/post-content.pug
@@ -1,6 +1,6 @@
 div(class='container--wide')
   div(class='post-content')
-    img(src='../../../assets/img/article/cover/benjamin-voros-phIFdC6lA4E-unsplash.jpg' alt='' lazyload)
+    img(src='../assets/img/article/cover/benjamin-voros-phIFdC6lA4E-unsplash.jpg' alt='' lazyload)
     p(class='lead') Woodlands payment Osgiliath tightening. Barad-dur follow belly comforts tender tough bell? Many that live deserve death. Some that die deserve life. Outwitted teatime grasp defeated before stones reflection corset seen animals Saruman&rsquo;s call?
     h2 Tad survive ensnare joy mistake courtesy Bagshot Row.
     p Ligulas step drops both? You shall not pass! Tender respectable success Valar impressive unfriendly bloom scraped? Branch hey-diddle-diddle pony trouble&rsquo;ll sleeping during jump Narsil.
@@ -39,28 +39,28 @@ div(class='container--wide')
     div(class='gallery')
       figure(class='gallery-item')
         a(href='#')
-          img(src='../../../assets/img/article/gallery/benjamin-voros-phIFdC6lA4E-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/benjamin-voros-phIFdC6lA4E-unsplash.jpg' alt='' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../../../assets/img/article/gallery/boris-baldinger-eUFfY6cwjSU-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/boris-baldinger-eUFfY6cwjSU-unsplash.jpg' alt='' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../../../assets/img/article/gallery/fabrice-villard-QrRSm-QbjW0-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/fabrice-villard-QrRSm-QbjW0-unsplash.jpg' alt='' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../../../assets/img/article/gallery/guillaume-briard-lSXpV8bDeMA-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/guillaume-briard-lSXpV8bDeMA-unsplash.jpg' alt='' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../../../assets/img/article/gallery/kyle-johnson-Aq7id0ZjEW4-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/kyle-johnson-Aq7id0ZjEW4-unsplash.jpg' alt='' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../../../assets/img/article/gallery/lucas-clara-hvPB-UCAmmU-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/lucas-clara-hvPB-UCAmmU-unsplash.jpg' alt='' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../../../assets/img/article/gallery/marco-pregnolato-ahYX46whD8s-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/marco-pregnolato-ahYX46whD8s-unsplash.jpg' alt='' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../../../assets/img/article/gallery/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg' alt='' lazyload)
     div(class='table-responsive')
       table(class='table table--striped table--rounded table--clear-border')
         thead
@@ -144,5 +144,5 @@ div(class='container--wide')
       dd Missing vanish taken colleague sway voice tricks 13 Grimbold.
       dd Thereof skills kingsfoil innocent riding light Thorin Oakenshield won.
     figure(class='figure')
-      img(src='../../../assets/img/article/cover/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg' alt='' lazyload)
+      img(src='../assets/img/article/cover/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg' alt='' lazyload)
       figcaption(class='figure-caption') Donec at arcu ac diam sodales elementum ac sit amet tortor.
