--- a/pug/templates/components/article/post-footer.pug
+++ b/pug/templates/components/article/post-footer.pug
@@ -1,4 +1,4 @@
 div(class='container--narrow')
   div(class='post-footer')
-    p Navigate #[a(href='https://sprucecss.com/examples/') back to Spruce examples].
+    p Navigate #[a(href='https://sprucecss.com/examples/') back to Spruce CSS examples].
     include ../theme-switcher
