--- a/pug/templates/components/article/post-content.pug
+++ b/pug/templates/components/article/post-content.pug
@@ -1,10 +1,10 @@
 div(class='container--wide')
   div(class='post-content')
     img(src='../assets/img/article/cover/benjamin-voros-phIFdC6lA4E-unsplash.jpg' alt='' lazyload)
-    p(class='lead') Woodlands payment Osgiliath tightening. Barad-dur follow belly comforts tender tough bell? Many that live deserve death. Some that die deserve life. Outwitted teatime grasp defeated before stones reflection corset seen animals Saruman&rsquo;s call?
-    h2 Tad survive ensnare joy mistake courtesy Bagshot Row.
-    p Ligulas step drops both? You shall not pass! Tender respectable success Valar impressive unfriendly bloom scraped? Branch hey-diddle-diddle pony trouble&rsquo;ll sleeping during jump Narsil.
-    h3 North valor overflowing sort I&aacute;ve mister kingly money?
+    p(class='lead') Woodlands payment Osgiliath tightening. Barad-dur follow belly comforts tender tough bell? Many that live deserve death. Some that die deserve life. Outwitted teatime grasp defeated before stones reflection corset seen animals Saruman’s call?
+    h2 Tad Survive Ensnare Joy Mistake Courtesy Bagshot Row
+    p Ligulas step drops both? You shall not pass! Tender respectable success Valar impressive unfriendly bloom scraped? Branch hey-diddle-diddle pony trouble’ll sleeping during jump Narsil.
+    h3 North Valor Overflowing Sort
     p Curse you and all the halflings! Deserted anytime Lake-town burned caves balls. Smoked lthilien forbids Thrain?
     div(class='aspect-ratio-16-9')
       iframe(src='https://www.youtube.com/embed/umbiR1sbap8' frameborder='0' allowfullscreen lazyload)
@@ -13,28 +13,28 @@ div(class='container--wide')
       li Southfarthing!
       li Witch-king.
       li Precious.
-      li Gaffer&rsquo;s!
+      li Gaffer’s!
     ul
-      li Excuse tightening yet survives two cover Und&oacute;miel city ablaze.
+      li Excuse tightening yet survives two cover Undomiel city ablaze.
       li Keepsakes deeper clouds Buckland position 21 lied bicker fountains ashamed.
       li Women rippling cold steps rules Thengel finer.
       li Portents close Havens endured irons hundreds handle refused sister?
       li Harbor Grubbs fellas riddles afar!
-    h3 Narsil enjoying shattered bigger leaderless retrieve dreamed dwarf.
+    h3 Narsil Enjoying Shattered Bigger Leaderless Retrieve Dreamed Dwarf
     p Ravens wonder wanted runs me crawl gaining lots faster! Khazad-dum surprise baby season ranks. I bid you all a very fond farewell.
     ol
       li Narsil.
       li Elros.
       li Arwen Evenstar.
-      li Maggot&rsquo;s?
+      li Maggot’s?
       li Bagginses?
     ol
       li Concerning Hobbits l golf air fifth bell prolonging camp.
       li Grond humble rods nearest mangler.
-      li Enormity L&oacute;rien merry gravy stayed move.
-      li Diversion almost notion furs between fierce laboring Nazg&ucirc;l ceaselessly parent.
+      li Enormity Lorien merry gravy stayed move.
+      li Diversion almost notion furs between fierce laboring Nazgûl ceaselessly parent.
       li Agree ruling um wasteland Bagshot Row expect sleep.
-    h3 Ere answering track forests shards roof!
+    h3 Ere Answering Track Forests Shards Roof!
     p Delay freezes Gollum. Let the Ring-bearer decide. Bagshot Row chokes pole pauses immediately orders taught &eacute;ored musing three-day? Disease rune repel source fire Goblinses already?
     div(class='gallery')
       figure(class='gallery-item')
@@ -122,23 +122,23 @@ div(class='container--wide')
             td thousand
             td manners
             td burning
-    h4 Afraid smithy Fellowship debt carven hooks.
-    p What about second breakfast? Nags runt near Lindir lock discover level? And&ucirc;ril breathe waited flatten union.
+    h4 Afraid Smithy Fellowship Debt Carven Hooks
+    p What about second breakfast? Nags runt near Lindir lock discover level? Andûril breathe waited flatten union.
     blockquote
       p You shall be the Fellowship of the Ring.
-      footer &mdash;N&uacute;menor,
+      footer Númenor,
         cite sweeter burned verse
-    h5 Should Shirelings extraordinary spends poison&rsquo;s willing enchantment.
+    h5 Should Shirelings Extraordinary Spends Poison’s Willing Enchantment
     p I think we should get off the road. Penalty sight splintered Misty Mountain mithril? Unrest lasts rode league bears absence Bracegirdle athletic contract nice parent slowed?
-    h6 Improve drops absolutely tight deceit potent Treebeard startled!
-    p J.R.R. Tolkien 3000 uttered veins roaring winds moaning flaming. Meddle #[ins measure pure Samwise Gamgee business!] #[sub Lied mistake Proudfoots pon. Instance 80] morbid ceremonial plunge Anor mad. Questions shells hangs noble Proudfoots throws. #[mark Rampart damage questions Chubbs 3000 conjurer? Single tempt peasants] #[strong Bolg Athelas Mordor Wraiths Azog Und&oacute;miel mangler?] Nori Giants Und&oacute;miel Rivendell spike posts took. Fool&rsquo;s Underhill boarded #[cite vanishing twilight unheard-of.] #[abbr Presence Dunland lamb lair]. Barricade #[sup didn&rsquo;t feelings purring vine Morgoth. Distract Giants nearing champion] T. Clothing titles quick bother #[em Arod Gloin Beren troop? Balls crashing bastards] #[small arrives precisely rascal stubbornness Snowbourn. Hobbitses rose barren] #[a strengths tested mirrors moonlight] password center? Remade free filthy breaking respect amuse Arod? Vengeance #[del Elessar Wolves posts remain doorway] said! Suspects fight Merry hungers locked yelp.
+    h6 Improve Drops Absolutely Tight Deceit Potent Treebeard Startled
+    p J.R.R. Tolkien 3000 uttered veins roaring winds moaning flaming. Meddle #[ins measure pure Samwise Gamgee business!] #[sub Lied mistake Proudfoots pon. Instance 80] morbid ceremonial plunge Anor mad. Questions shells hangs noble Proudfoots throws. #[mark Rampart damage questions Chubbs 3000 conjurer? Single tempt peasants] #[strong Bolg Athelas Mordor Wraiths Azog Undomiel mangler?] Nori Giants Undomiel Rivendell spike posts took. Fool’s Underhill boarded #[cite vanishing twilight unheard-of.] #[abbr Presence Dunland lamb lair]. Barricade #[sup didn’t feelings purring vine Morgoth. Distract Giants nearing champion] T. Clothing titles quick bother #[em Arod Gloin Beren troop? Balls crashing bastards] #[small arrives precisely rascal stubbornness Snowbourn. Hobbitses rose barren] #[a strengths tested mirrors moonlight] password center? Remade free filthy breaking respect amuse Arod? Vengeance #[del Elessar Wolves posts remain doorway] said! Suspects fight Merry hungers locked yelp.
     hr
     dl
       dt Abandon
       dd Tact flies disturber thinking hospitality Elros act vest handy ranks.
       dt Devil
       dd Boneses spilled Caradhras hungry pace lanterns glory haunted shone forging.
-      dd Unprotected Beorn&rsquo;s fireworks dream journey beacon dwells gnaws key.
+      dd Unprotected Beorn’s fireworks dream journey beacon dwells gnaws key.
       dt Happened
       dd Known wanna fifth Bill hell knew she scale.
       dd Missing vanish taken colleague sway voice tricks 13 Grimbold.
@@ -146,3 +146,4 @@ div(class='container--wide')
     figure(class='figure')
       img(src='../assets/img/article/cover/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg' alt='' lazyload)
       figcaption(class='figure-caption') Donec at arcu ac diam sodales elementum ac sit amet tortor.
+    include credit
