--- a/pug/templates/components/article/post-content.pug
+++ b/pug/templates/components/article/post-content.pug
@@ -1,6 +1,6 @@
 div(class='container--wide')
   div(class='post-content')
-    img(src='../assets/img/article/cover/benjamin-voros-phIFdC6lA4E-unsplash.jpg' alt='' lazyload)
+    img(src='../assets/img/article/cover/benjamin-voros-phIFdC6lA4E-unsplash.jpg' alt='snow mountain under stars' lazyload)
     p(class='lead') Woodlands payment Osgiliath tightening. Barad-dur follow belly comforts tender tough bell? Many that live deserve death. Some that die deserve life. Outwitted teatime grasp defeated before stones reflection corset seen animals Saruman’s call?
     h2 Tad Survive Ensnare Joy Mistake Courtesy Bagshot Row
     p Ligulas step drops both? You shall not pass! Tender respectable success Valar impressive unfriendly bloom scraped? Branch hey-diddle-diddle pony trouble’ll sleeping during jump Narsil.
@@ -39,28 +39,28 @@ div(class='container--wide')
     div(class='gallery')
       figure(class='gallery-item')
         a(href='#')
-          img(src='../assets/img/article/gallery/benjamin-voros-phIFdC6lA4E-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/benjamin-voros-phIFdC6lA4E-unsplash.jpg' alt='snow mountain under stars' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../assets/img/article/gallery/boris-baldinger-eUFfY6cwjSU-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/boris-baldinger-eUFfY6cwjSU-unsplash.jpg' alt='aerial view of mountain' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../assets/img/article/gallery/fabrice-villard-QrRSm-QbjW0-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/fabrice-villard-QrRSm-QbjW0-unsplash.jpg' alt='mountain coated with snow' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../assets/img/article/gallery/guillaume-briard-lSXpV8bDeMA-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/guillaume-briard-lSXpV8bDeMA-unsplash.jpg' alt='closeup photo of rocky mountain under blue and white sky' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../assets/img/article/gallery/kyle-johnson-Aq7id0ZjEW4-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/kyle-johnson-Aq7id0ZjEW4-unsplash.jpg' alt='man standing on grass field overlooking mountain' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../assets/img/article/gallery/lucas-clara-hvPB-UCAmmU-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/lucas-clara-hvPB-UCAmmU-unsplash.jpg' alt='man with red backpack standing on cliff facing mountains under white sky during daytime' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../assets/img/article/gallery/marco-pregnolato-ahYX46whD8s-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/marco-pregnolato-ahYX46whD8s-unsplash.jpg' alt='snow covered mountain under blue sky during daytime' lazyload)
       figure(class='gallery-item')
         a(href='#')
-          img(src='../assets/img/article/gallery/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg' alt='' lazyload)
+          img(src='../assets/img/article/gallery/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg' alt='three brown wooden boat on blue lake water taken at daytime' lazyload)
     div(class='table-responsive')
       table(class='table table--striped table--rounded table--clear-border')
         thead
@@ -144,6 +144,6 @@ div(class='container--wide')
       dd Missing vanish taken colleague sway voice tricks 13 Grimbold.
       dd Thereof skills kingsfoil innocent riding light Thorin Oakenshield won.
     figure(class='figure')
-      img(src='../assets/img/article/cover/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg' alt='' lazyload)
+      img(src='../assets/img/article/cover/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg' alt='three brown wooden boat on blue lake water taken at daytime' lazyload)
       figcaption(class='figure-caption') Donec at arcu ac diam sodales elementum ac sit amet tortor.
     include credit
